--- a/login.css
+++ b/login.css
@@ -16,16 +16,19 @@
   padding: 4px;
 }
 
-
 .login {
     background-color: #ebebeb;
     padding: 2vw;
-    margin:auto;
+    /* margin:auto; */
     font-family: "Roboto", sans-serif;
+  }
+
+  form.login {
+    width: 86vw;
   }
   
   .field {
-    width: 85vw;
+    width: 80vw;
     padding: 2vh;
     margin-bottom: 8vh;
     border-radius: 5px;
@@ -43,3 +46,8 @@
     border-radius: 5px;  
     
   }
+
+  .footer {
+    width: 90vw;
+  }
+ 
