--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,47 @@ div .precio-descuento{
     
   }
 
+  
+   .img-art {
+     transition: box-shadow 0.3s ease;
+   }
+
+  .img-art:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    
+  }  
+
+
+
+   .description {
+    visibility: hidden;
+  }
+
+  .precio-descuento:hover .description {
+    visibility: visible;
+  }
+   
+
+ .fa-truck-field {
+    transition: transform 0.3s ease;
+  } 
+
+  .camion:hover .fa-truck-field {
+    transform: rotate(-90deg); /* Rotación de 90 grados hacia arriba 
+ } 
+
+.container-footer-icon{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 90vw;
+} 
+    
+ .icn:hover {
+  color: #eac926;
+} 
+
+
 }
 
 
